@@ -13,6 +13,7 @@ Thu Apr 29 16:20:00 2010 Damien Churchill <damoxc@gmail.com>
 		+ bugfix:  fix binding parameters of int type when larger than
 		           2^31 - 1 (raise exception).
 		+ bugfix:  use sprintf rather than python strings in the msg_handler
+		+ bugfix:  use sprintf rather than python strings in the err_handler
 	* pymssql:
 		+ feature: add initial support for callproc()
 		+ feature: add support for setting the application name
